# advent-of-code

./: .gitignore  .pylintrc  README.md  pyproject.toml
year-2020/: day-01.py
year-2020/day-01/: solution.py  test_solution.py
year-2020/day-02/: solution.py  test_solution.py
year-2020/day-03/: solution.py  test_solution.py
year-2020/day-04/: solution.py  test_solution.py
year-2020/day-05/: solution.py  test_solution.py
year-2020/day-06/: solution.py  test_solution.py
year-2020/day-07/: solution.py  test_solution.py
year-2020/day-08/: solution.py  test_solution.py
year-2020/day-09/: solution.py  test_solution.py
year-2020/day-10/: solution.py  test_solution.py
year-2021/day-01/: solution.py  test_solution.py
year-2021/day-02/: solution.py  test_solution.py
year-2021/day-03/: solution.py  test_solution.py
year-2021/day-04/: solution.py  test_solution.py
year-2021/day-05/: solution.py  test_solution.py
year-2022/day-01/src/: main.rs
year-2022/day-02/src/: main.rs
year-2022/day-03/src/: main.rs
year-2022/day-04/src/: main.rs
year-2022/day-05/: Cargo.toml
year-2022/day-05/src/: main.rs
year-2022/day-06/src/: main.rs
year-2022/day-07/: Cargo.toml
year-2022/day-07/src/: main.rs
year-2022/day-08/: Cargo.toml
year-2022/day-08/src/: main.rs
year-2024/day-01/: solution.py  test_solution.py
year-2024/day-03/: solution.py  test_solution.py
year-2025/day-01/: solution.py  test_solution.py
year-2025/day-02/: solution.py  test_solution.py
