[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "My solutions for the Advent of Code challenge. 🎄"
authors = ["Matteo Bilotta <me@byloth.net>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
